karma-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: karma
  namespace: karma
spec:
  replicas: 1
  selector:
    matchLabels:
      app: karma
  template:
    metadata:
      labels:
        app: karma
    spec:
      containers:
        - name: karma
          image: dc1-repo-pub.vps.com.vn/prymitive/karma:latest
          args:
            - --config.file=/etc/karma/karma.yml
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: config-volume
              mountPath: /etc/karma
              readOnly: true
      volumes:
        - name: config-volume
          configMap:
            name: karma-config

---
apiVersion: v1
kind: Service
metadata:
  name: karma
  namespace: karma
spec:
  selector:
    app: karma
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: karma
  namespace: karma
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: alert-summary.vps.com.vn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: karma
                port:
                  number: 80
